# TestDevOps

./: CMakeLists.txt  Dockerfile  README.md  Vagrantfile  docker-install.yml  so-build.yml
